test/e2e/chainsaw/stepTemplates/updateApi.yaml
# Copyright (C) 2015 The Gravitee team (http://gravitee.io)
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#         http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/steptemplate-chainsaw-v1alpha1.json

apiVersion: chainsaw.kyverno.io/v1alpha1
kind: StepTemplate
metadata:
  name: update-api
spec:
    try:
      - script:
          env:
            - name: API_CRD_FILE
              value: ($apiCrdFile)
            - name: RESOURCE_NAMESPACE
              value: ($namespace)
          content: |
            kubectl apply -f "$API_CRD_FILE" -n "$RESOURCE_NAMESPACE"
      - wait:
          apiVersion: gravitee.io/v1alpha1
          kind: ($apiKind)
          name: ($apiName)
          for:
            condition:
              name: Accepted          
              value: "True"
    catch:
      - events: {}
      - script:
          env:
            - name: RESOURCE_NAMESPACE
              value: ($namespace)
            - name: API_NAME
              value: ($apiName)
          content: |
            echo "Failed to update API, displaying API resource:"
            kubectl get apidefinitions.gravitee.io -n $RESOURCE_NAMESPACE $API_NAME -o yaml
            echo "--- Managed fields (json) ---"
            kubectl get apidefinitions.gravitee.io -n $RESOURCE_NAMESPACE $API_NAME -o json --show-managed-fields | jq '.metadata.managedFields'
    cleanup:
      - delete:
          file: ($apiCrdFile)
